Updated JSON package, addressed next image 13 warning, and fixed jump animation of textured background

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1574,7 +1574,10 @@ main {
 
 .bg-texture {
   position: fixed;
-  inset: -4rem;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
   background-image: url("../../assets/bgTexture.jpg");
   opacity: var(--bg-texture-opacity);
   z-index: -1;
