--- a/src/styles/sass/_bg_texture.scss
+++ b/src/styles/sass/_bg_texture.scss
@@ -1,7 +1,10 @@
 
 .bg-texture{
   position: fixed;
-  inset: -4rem;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
   background-image: url("../../assets/bgTexture.jpg");
   opacity: var(--bg-texture-opacity);
   z-index: -1;
